--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "debug": "~2.2.0",
     "express": "~4.13.1",
     "jade": "~1.11.0",
+    "lodash": "^4.13.1",
     "mocha": "^2.5.3",
     "morgan": "~1.6.1",
     "serve-favicon": "~2.3.0"
