--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.13.1",
+    "follow-redirects": "^0.2.0",
     "jade": "~1.11.0",
     "lodash": "^4.13.1",
     "mocha": "^2.5.3",
