--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "lodash": "^4.13.1",
     "mocha": "^2.5.3",
     "morgan": "~1.6.1",
+    "request": "^2.73.0",
     "rewire": "^2.5.1",
     "serve-favicon": "~2.3.0"
   },
