--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "morgan": "~1.6.1",
     "request": "^2.73.0",
     "rewire": "^2.5.1",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "sinon": "^1.17.4",
+    "winston": "^2.2.0"
   },
   "devDependencies": {
     "chai": "^3.5.0"
