--- a/circle.yml
+++ b/circle.yml
@@ -1,9 +1,23 @@
+machine:
+  services:
+    - docker
+
+dependencies:
+  post:
+    - docker build -t 417615409974.dkr.ecr.us-west-2.amazonaws.com/motherboxx-images:latest
+
+#deployment:
+ # dockerhub:
+  #  branch: master
+   # commands:
+    #  - $DOCKER_HUB_TRIGGER
+
 deployment:
-  dockerhub:
+  prod:
     branch: master
     commands:
-      - $DOCKER_HUB_TRIGGER
-
+      - ./deploy.sh
 test:
-  override:
-    - mocha
+  post:
+    - docker run -d -p 8080:8080 --name comicservice 417615409974.dkr.ecr.us-west-2.amazonaws.com/motherboxx-images:latest; sleep 10
+    - curl --retry 10 --retry-delay 5 localhost:8080 | grep "{"title":"Health Check"}"
